fix: resolve kustomize security error and add PR comment permissions
- Add base/kustomization.yaml to properly structure kustomize resources
- Update overlay to reference base directory instead of individual file
- Add pull-requests: write permission for PR comment posting

--- a/.github/workflows/load-test.yaml
+++ b/.github/workflows/load-test.yaml
@@ -18,6 +18,10 @@ env:
   CLUSTER_NAME: load-test-cluster
   NAMESPACE: echo-test
 
+permissions:
+  contents: read
+  pull-requests: write
+
 jobs:
   load-test:
     runs-on: ubuntu-latest
