--- a/k8s/base/kustomization.yaml
+++ b/k8s/base/kustomization.yaml
@@ -1,6 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+# Only namespace here - http-echo is a template referenced by app overlays
 resources:
   - namespace.yaml
-  - http-echo
