--- a/.github/workflows/load-test.yaml
+++ b/.github/workflows/load-test.yaml
@@ -13,6 +13,10 @@ on:
         description: 'Test duration (e.g., 30s, 1m)'
         required: false
         default: '30s'
+      fail_rate:
+        description: 'Percentage of requests to fail (0-100)'
+        required: false
+        default: '0'
 
 env:
   CLUSTER_NAME: load-test-cluster
@@ -121,6 +125,7 @@ jobs:
             --namespace $NAMESPACE \
             --rate ${{ github.event.inputs.rate || '100' }} \
             --duration ${{ github.event.inputs.duration || '30s' }} \
+            --fail-rate ${{ github.event.inputs.fail_rate || '0' }} \
             --output-dir ./results
           EXIT_CODE=$?
           echo "exit_code=$EXIT_CODE" >> $GITHUB_OUTPUT
