ci: trigger workflow on push to main and feature branch

--- a/.github/workflows/load-test.yaml
+++ b/.github/workflows/load-test.yaml
@@ -1,6 +1,8 @@
 name: K8s Load Test
 
 on:
+  push:
+    branches: [main, feat/production-hardening]
   pull_request:
     branches: [main]
   workflow_dispatch:
