--- a/k8s/base/http-echo/deployment.yaml
+++ b/k8s/base/http-echo/deployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: http-echo
-          image: hashicorp/http-echo:0.2.3
+          image: hashicorp/http-echo:latest
           args:
             - "-text=hello"
             - "-listen=:5678"
